Implement full screen toggle with View menu integration and exit full screen support

--- a/CommandForm.ui
+++ b/CommandForm.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>400</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -29,11 +29,23 @@
     </property>
     <addaction name="action_disconnect"/>
    </widget>
+   <widget class="QMenu" name="menu_View">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+    <addaction name="action_exit_full_screen"/>
+   </widget>
    <addaction name="menu_File"/>
+   <addaction name="menu_View"/>
   </widget>
   <action name="action_disconnect">
    <property name="text">
     <string>&amp;Disconnect</string>
+   </property>
+  </action>
+  <action name="action_exit_full_screen">
+   <property name="text">
+    <string>Exit full screen</string>
    </property>
   </action>
  </widget>
